[package]
name = "dope-db"
version = "0.1.0"
edition = "2021"

[dependencies]
axum = "0.7.7"
axum-macros = "0.4.2"
base64 = "0.22.1"
fnv = "1.0.7"
serde = { version = "1.0.213", features = ["derive"] }
serde-binary = "0.5.0"
sha2 = "0.10.8"
tokio = {version = "1.41.0", features = ["rt-multi-thread"]}
